Change searchbox min-width to avoid horizontal scrolling on pc

--- a/css/styles.css
+++ b/css/styles.css
@@ -43,7 +43,7 @@ table th{
 
 table .search-row .form-control{
     width: 90%;
-    min-width: 150px;
+    min-width: 130px;
 }
 
 .table td, .table th {
